# esp_google_protobuf

./: .gitmodules  CMakeLists.txt  README.md  idf_component.yml
cmake/: ProtobufConfig.cmake
examples/pb_example/: CMakeLists.txt  README.md  sdkconfig.defaults
examples/pb_example/components/proto_files/: CMakeLists.txt
examples/pb_example/components/proto_files/repo1/dir1/: file1.proto
examples/pb_example/main/: CMakeLists.txt  idf_component.yml  pb_example.cpp
local_include/: endian.h
src/: alloc_pb.cpp
